[gd_scene load_steps=19 format=3 uid="uid://d7pds6ys2gwo"]

[ext_resource type="Script" path="res://minigames/totems/main.gd" id="1_qcm1e"]
[ext_resource type="Texture2D" uid="uid://bc601x3174vxd" path="res://minigames/totems/fondo.png" id="1_uv2t7"]
[ext_resource type="Script" path="res://minigames/totems/Camera2D.gd" id="2_yj5lu"]
[ext_resource type="Script" path="res://minigames/totems/BlockSpawner.gd" id="3_4x1id"]
[ext_resource type="Texture2D" uid="uid://d1usuxrhmspu7" path="res://minigames/totems/bordeFondo1.png" id="3_b83ca"]
[ext_resource type="Texture2D" uid="uid://dufjnxx66v8ip" path="res://minigames/totems/bordeBoton1.png" id="3_bvj3h"]
[ext_resource type="AudioStream" uid="uid://c5eysmu77p1m" path="res://minigames/totems/totemFall.wav" id="3_rn2o5"]
[ext_resource type="Texture2D" uid="uid://bfvoj3kniecg4" path="res://minigames/totems/bordeBoton2.png" id="4_8e408"]
[ext_resource type="Texture2D" uid="uid://dd4culyc0401v" path="res://minigames/totems/bordeFondo2.png" id="4_qeps6"]
[ext_resource type="AudioStream" uid="uid://17dmo6nbtm46" path="res://minigames/totems/click.wav" id="4_tdstx"]
[ext_resource type="Script" path="res://minigames/totems/animacionBasica.gd" id="5_lthdy"]
[ext_resource type="Texture2D" uid="uid://b4341h4anxscw" path="res://minigames/totems/tornillo.png" id="5_x2jwd"]
[ext_resource type="Texture2D" uid="uid://drri71vghfe1d" path="res://minigames/totems/white_square.png" id="7_ti7d8"]
[ext_resource type="Texture2D" uid="uid://cgx8f4qdq23il" path="res://minigames/totems/PLAGA_GOD.png" id="11_gt51w"]
[ext_resource type="Script" path="res://minigames/totems/botonVisualScript.gd" id="11_nik8q"]
[ext_resource type="AudioStream" uid="uid://dm7m3cjd0d3n6" path="res://minigames/totems/bloquesTheme.ogg" id="14_2p84n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b35wq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_b83ca")
}, {
"duration": 1.0,
"texture": ExtResource("4_qeps6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_eblgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bvj3h")
}, {
"duration": 1.0,
"texture": ExtResource("4_8e408")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="main" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_qcm1e")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
ignore_rotation = false
script = ExtResource("2_yj5lu")

[node name="shakeTimer" type="Timer" parent="Camera2D"]
wait_time = 0.3
one_shot = true

[node name="fondo" type="Sprite2D" parent="."]
position = Vector2(1190.25, 1817.5)
scale = Vector2(2.83154, 4.08691)
texture = ExtResource("1_uv2t7")

[node name="Block_Spawner" type="Node2D" parent="."]
script = ExtResource("3_4x1id")

[node name="totemFalling" type="AudioStreamPlayer2D" parent="Block_Spawner"]
stream = ExtResource("3_rn2o5")
volume_db = -5.714
pitch_scale = 0.7

[node name="buttonClick" type="AudioStreamPlayer2D" parent="Block_Spawner"]
stream = ExtResource("4_tdstx")
volume_db = -12.716
pitch_scale = 0.71

[node name="Timer" type="Timer" parent="Block_Spawner"]
wait_time = 0.75
one_shot = true

[node name="fondoBotones" type="Sprite2D" parent="."]
modulate = Color(0.52549, 0.52549, 0.52549, 1)
position = Vector2(371.5, 1068)
scale = Vector2(1.22852, 0.738281)
texture = ExtResource("7_ti7d8")

[node name="BordeGrande" type="AnimatedSprite2D" parent="."]
position = Vector2(361.823, 1069.01)
rotation = 3.14159
scale = Vector2(1.08963, 0.635307)
sprite_frames = SubResource("SpriteFrames_b35wq")
frame_progress = 0.395819
script = ExtResource("5_lthdy")

[node name="moradoBoton" type="Button" parent="."]
modulate = Color(0.376471, 0, 0.972549, 1)
offset_left = 162.0
offset_top = 960.0
offset_right = 682.0
offset_bottom = 1480.0
scale = Vector2(0.17, 0.17)
icon = ExtResource("7_ti7d8")
script = ExtResource("11_nik8q")

[node name="bordeBoton" type="AnimatedSprite2D" parent="moradoBoton"]
position = Vector2(284.167, 258.382)
scale = Vector2(2.41536, 2.35026)
sprite_frames = SubResource("SpriteFrames_eblgm")
frame_progress = 0.389588
script = ExtResource("5_lthdy")

[node name="rosaBoton" type="Button" parent="."]
modulate = Color(1, 0.501961, 1, 1)
offset_left = 293.651
offset_top = 958.272
offset_right = 813.651
offset_bottom = 1478.27
scale = Vector2(0.17, 0.17)
icon = ExtResource("7_ti7d8")
script = ExtResource("11_nik8q")

[node name="bordeBoton" type="AnimatedSprite2D" parent="rosaBoton"]
position = Vector2(267.5, 252.5)
scale = Vector2(2.41536, 2.35026)
sprite_frames = SubResource("SpriteFrames_eblgm")
frame_progress = 0.0493107
script = ExtResource("5_lthdy")

[node name="naranjaBoton" type="Button" parent="."]
modulate = Color(1, 0.501961, 0, 1)
offset_left = 421.651
offset_top = 958.272
offset_right = 941.651
offset_bottom = 1478.27
scale = Vector2(0.17, 0.17)
icon = ExtResource("7_ti7d8")
script = ExtResource("11_nik8q")

[node name="bordeBoton" type="AnimatedSprite2D" parent="naranjaBoton"]
position = Vector2(267.5, 252.5)
scale = Vector2(2.41536, 2.35026)
sprite_frames = SubResource("SpriteFrames_eblgm")
frame_progress = 0.146533
script = ExtResource("5_lthdy")

[node name="tornillo" type="Sprite2D" parent="."]
position = Vector2(580.25, 978)
scale = Vector2(0.355468, 0.328125)
texture = ExtResource("5_x2jwd")

[node name="tornillo2" type="Sprite2D" parent="."]
position = Vector2(590, 1187)
scale = Vector2(0.324218, 0.328126)
texture = ExtResource("5_x2jwd")

[node name="tornillo3" type="Sprite2D" parent="."]
position = Vector2(114, 1183)
scale = Vector2(0.347656, 0.312501)
texture = ExtResource("5_x2jwd")

[node name="tornillo4" type="Sprite2D" parent="."]
position = Vector2(109, 965)
scale = Vector2(0.332031, 0.289063)
texture = ExtResource("5_x2jwd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(362, 1161)
scale = Vector2(1, 0.730469)
texture = ExtResource("11_gt51w")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_2p84n")
volume_db = 8.432
autoplay = true

[connection signal="game_timeout" from="." to="Block_Spawner" method="_on_game_timeout"]
[connection signal="timeout" from="Camera2D/shakeTimer" to="Camera2D" method="_on_shake_timer_timeout"]
[connection signal="end_game" from="Block_Spawner" to="." method="_on_end_game"]
[connection signal="stun_end" from="Block_Spawner" to="BordeGrande" method="_on_block_spawner_stun_end"]
[connection signal="stun_end" from="Block_Spawner" to="moradoBoton" method="_on_stun_end"]
[connection signal="stun_end" from="Block_Spawner" to="moradoBoton/bordeBoton" method="_on_block_spawner_stun_end"]
[connection signal="stun_end" from="Block_Spawner" to="rosaBoton" method="_on_stun_end"]
[connection signal="stun_end" from="Block_Spawner" to="rosaBoton/bordeBoton" method="_on_block_spawner_stun_end"]
[connection signal="stun_end" from="Block_Spawner" to="naranjaBoton" method="_on_stun_end"]
[connection signal="stun_end" from="Block_Spawner" to="naranjaBoton/bordeBoton" method="_on_block_spawner_stun_end"]
[connection signal="stun_start" from="Block_Spawner" to="Camera2D" method="_on_stun_start"]
[connection signal="stun_start" from="Block_Spawner" to="BordeGrande" method="_on_block_spawner_stun_start"]
[connection signal="stun_start" from="Block_Spawner" to="moradoBoton" method="_on_stun_start"]
[connection signal="stun_start" from="Block_Spawner" to="moradoBoton/bordeBoton" method="_on_block_spawner_stun_start"]
[connection signal="stun_start" from="Block_Spawner" to="rosaBoton" method="_on_stun_start"]
[connection signal="stun_start" from="Block_Spawner" to="rosaBoton/bordeBoton" method="_on_block_spawner_stun_start"]
[connection signal="stun_start" from="Block_Spawner" to="naranjaBoton" method="_on_stun_start"]
[connection signal="stun_start" from="Block_Spawner" to="naranjaBoton/bordeBoton" method="_on_block_spawner_stun_start"]
[connection signal="win_game" from="Block_Spawner" to="." method="_on_win_game"]
[connection signal="timeout" from="Block_Spawner/Timer" to="Block_Spawner" method="_on_timer_timeout"]
[connection signal="button_down" from="moradoBoton" to="Block_Spawner" method="_on_morado_boton_button_down"]
[connection signal="button_down" from="rosaBoton" to="Block_Spawner" method="_on_rosa_boton_button_down"]
[connection signal="button_down" from="naranjaBoton" to="Block_Spawner" method="_on_naranja_boton_button_down"]
